--- a/index.html
+++ b/index.html
@@ -6,5 +6,20 @@
   </head>
   <body>
     Make a notebook app here, please
+    <div id="root"></div>
+
+    <!-- <script defer src="../node_modules/es-module-shims/dist/es-module-shims.js"></script>
+    <script type="importmap-shim">
+      {
+        "imports": {
+          "react": "../node_modules/react/umd/react.development.js"
+        }
+      }
+    </script> -->
+    <script src="node_modules/react/umd/react.development.js"></script>
+    <!-- <script src="node_modules/react/umd/react.production.min.js"></script> -->
+    <script src="node_modules/react-dom/umd/react-dom.development.js"></script>
+    <!-- <script src="node_modules/react-dom/umd/react-dom.production.min.js"></script> -->
+    <script src="js/app.js" type="module"/>
   </body>
 </html>
