--- a/index.html
+++ b/index.html
@@ -3,15 +3,27 @@
   <head>
     <meta charset="utf-8">
     <title>Physics Notebook</title>
+    <link rel="stylesheet" href="deps/mathquill-0.10.1/mathquill.css"/>
   </head>
   <body>
     Make a notebook app here, please
     <div id="root"></div>
 
+    <!-- React -->
     <script src="node_modules/react/umd/react.development.js"></script>
     <!-- <script src="node_modules/react/umd/react.production.min.js"></script> -->
     <script src="node_modules/react-dom/umd/react-dom.development.js"></script>
     <!-- <script src="node_modules/react-dom/umd/react-dom.production.min.js"></script> -->
+
+    <!-- MathQuill -->
+    <!-- jQuery is purely for MathQuill, try to keep the use of it down to what is required for MathQuill -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
+    <script src="deps/mathquill-0.10.1/mathquill.js"></script>
+    <script>
+      var MQ = MathQuill.getInterface(2);
+    </script>
+
+    <!-- PhysicsNotbook Entry Point -->
     <script src="js/app.js" type="module"></script>
   </body>
 </html>
