Fix bugs in loading app testing

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
   <head>
     <meta charset="utf-8">
     <title>Physics Notebook</title>
+    <link rel="stylesheet" href="css/app.css"/>
     <link rel="stylesheet" href="deps/mathquill-0.10.1/mathquill.css"/>
   </head>
   <body>
-    Make a notebook app here, please
-    <div id="root"></div>
+    <div id="root">
+      Make a notebook app here, please
+    </div>
 
     <!-- React -->
     <script src="node_modules/react/umd/react.development.js"></script>
