Added a font and changed all of the font over

--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <title>Physics Notebook</title>
     <link rel="stylesheet" href="css/app.css"/>
     <link rel="stylesheet" href="deps/mathquill-0.10.1/mathquill.css"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root">
