Add mathjs library

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
       var MQ = MathQuill.getInterface(2);
     </script>
 
+    <!-- MathJS -->
+    <script src="/node_modules/mathjs/lib/browser/math.js"></script>
+
     <!-- PhysicsNotbook Entry Point -->
     <script src="js/app.js" type="module"></script>
   </body>
