Add tex-math-parser library

--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
     </script>
 
     <!-- MathJS -->
-    <script src="/node_modules/mathjs/lib/browser/math.js"></script>
+    <script src="node_modules/mathjs/lib/browser/math.js"></script>
+
+    <!-- tex-math-parser -->
+    <script src="deps/tex-math-parser/index.js"></script>
 
     <!-- PhysicsNotbook Entry Point -->
     <script src="js/app.js" type="module"></script>
