Improve sidebar styles

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id="root">
-      Make a notebook app here, please
+      Loading...
     </div>
 
     <!-- React -->
