Organize css and adjust help menu for smaller screen sizes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8">
     <title>Physics Notebook</title>
     <link rel="stylesheet" href="css/app.css"/>
+    <link rel="stylesheet" href="css/problemSpace.css"/>
+    <link rel="stylesheet" href="css/manipulationMenu.css"/>
+    <link rel="stylesheet" href="css/equationBank.css"/>
+    <link rel="stylesheet" href="css/sidebars.css"/>
+    <link rel="stylesheet" href="css/helpMenu.css"/>
     <link rel="stylesheet" href="node_modules/mathquill/build/mathquill.css"/>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
