--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
     <script src="node_modules/tex-math-parser/dist/browser/index.js"></script>
 
     <!-- PhysicsNotbook Entry Point -->
-    <script src="js/app.js" type="module"></script>
+    <script src="js/index.js" type="module"></script>
   </body>
 </html>
